--- a/top.html
+++ b/top.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta content="よおこそ" >
-  <title>トップ</title>
+  <title>みずちーさんのHP トップ</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 
