--- a/top.html
+++ b/top.html
@@ -6,11 +6,11 @@
 </head>
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="hoge">
-<div align="center"><a href="https://www16.big.or.jp/~zun/top.html"><img alt="飾りバー" width="512" height="256" border="0" src="https://cdn.discordapp.com/attachments/889847829063933972/961248546110210198/top.png"><br></a>
+<div align="center"><a href="https://mizutisann.github.io/HP/top"><img alt="飾りバー" width="512" height="256" border="0" src="https://cdn.discordapp.com/attachments/889847829063933972/961248546110210198/top.png"><br></a>
 <p>　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
 <br>
 <br>
-<a href="https://www16.big.or.jp/~zun/top.html">HOMEへ</a>
+<a href="https://mizutisann.github.io/HP/top">HOMEへ</a>
 //仮で上海アリスをぶっこむ(^^;
 <br>
 <br>
