--- a/home.html
+++ b/home.html
@@ -5,9 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 
-<body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6">
-<h1>建設途中！！</h1>
-<p>TOP用に～と描いたメードさんでも(^^;</p>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1037112623893852210/utinoko1.png">
+<body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
+<h1>～みずちーさんのHP～</H1><div align="center"><h1>よおこそ</H1>
+<img src="https://cdn.discordapp.com/attachments/889847829063933972/1038816393895878776/hometop00.png">
+<h6>アクセスカウンタの置き方が分からなかったのでキリ番踏んでもバレません。うわーん(^^;</h6>
+<a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353684328528/kanrinin.png">管理人っぽい人の紹介です。<br></a>
+<a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616354502213673/zakki.png">書き散らしてます。多分。<br></a>
+<a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352849662003/game.png">ゲエムについて語ったりとか。<br></a>
+<a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353181007932/PC.png">主にオウルドなPCの事を。<br></a>
+<a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352388296824/kuruma.png">これもオウルドな車の話を。<br></a>
+<a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616354149904414/egensou.png">描いた會とかを貼ってます。<br></a>
+<a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038619359079301270/iteki.png">リンク置き場です。偶に異的。<br></a>
+
+</div>
 </body>
 </html>
