--- a/home.html
+++ b/home.html
@@ -9,13 +9,13 @@
 <h1>～みずちーさんのHP～</H1><div align="center"><h1>よおこそ</H1>
 <img src="https://cdn.discordapp.com/attachments/889847829063933972/1038816393895878776/hometop00.png">
 <h6>アクセスカウンタの置き方が分からなかったのでキリ番踏んでもバレません。うわーん(^^;</h6>
-<a href="https://mizutisann.github.io/HP/~kari"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353684328528/kanrinin.png">管理人っぽい人の紹介です。<br></a>
-<a href="https://mizutisann.github.io/HP/~kari"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616354502213673/zakki.png">書き散らしてます。多分。<br></a>
-<a href="https://mizutisann.github.io/HP/~kari"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352849662003/game.png">ゲエムについて語ったりとか。<br></a>
-<a href="https://mizutisann.github.io/HP/~kari"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353181007932/PC.png">主にオウルドなPCの事を。<br></a>
-<a href="https://mizutisann.github.io/HP/~kari"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352388296824/kuruma.png">これもオウルドな車の話を。<br></a>
-<a href="https://mizutisann.github.io/HP/~kari"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616354149904414/egensou.png">描いた會とかを貼ってます。<br></a>
-<a href="https://mizutisann.github.io/HP/~kari"><img alt="飾りバー"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038619359079301270/iteki.png">リンク置き場です。偶に異的。<br></a>
+<a href="https://mizutisann.github.io/HP/~kari"><img alt="管理人紹介"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353684328528/kanrinin.png">管理人っぽい人の紹介です。<br></a>
+<a href="https://mizutisann.github.io/HP/~kari"><img alt="雑記など"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616354502213673/zakki.png">書き散らしてます。多分。<br></a>
+<a href="https://mizutisann.github.io/HP/~kari"><img alt="ゲエムの間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352849662003/game.png">ゲエムについて語ったりとか。<br></a>
+<a href="https://mizutisann.github.io/HP/~kari"><img alt="PCの間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353181007932/PC.png">主にオウルドなPCの事を。<br></a>
+<a href="https://mizutisann.github.io/HP/~kari"><img alt="車関係の間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352388296824/kuruma.png">これもオウルドな車の話を。<br></a>
+<a href="https://mizutisann.github.io/HP/~kari"><img alt="少女會"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616354149904414/egensou.png">描いた會とかを貼ってます。<br></a>
+<a href="https://mizutisann.github.io/HP/~kari"><img alt="リンク置き場"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038619359079301270/iteki.png">リンク置き場です。偶に異的。<br></a>
 
 </div>
 </body>
