--- a/~kari.html
+++ b/~kari.html
@@ -9,6 +9,6 @@
 <h1>工事中です。しばらくお待ちください。</h1>
 <p>TOP用に～と思って用意したけど没になったメードさんの會でも(^^;</p>
 <img src="https://cdn.discordapp.com/attachments/889847829063933972/1038629573929222275/hometop.png">
-<p>メードさんの名前募集中かも(^^;</p>
+<p>メイドさんの名前募集中かも(^^;</p>
 </body>
 </html>
