--- a/~kari.html
+++ b/~kari.html
@@ -7,7 +7,7 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6">
 <h1>工事中です。しばらくお待ちください。</h1>
-<p>TOP用に～と思って用意したけど没になったメードさんの會でも(^^;</p>
+<p>TOP用に～と思って用意したけど没になったメイドさんの會でも(^^;</p>
 <img src="https://cdn.discordapp.com/attachments/889847829063933972/1038629573929222275/hometop.png">
 <p>メイドさんの名前募集中かも(^^;</p>
 </body>
