--- a/syoukai.html
+++ b/syoukai.html
@@ -1,25 +1,15 @@
 <html>
 <head>
-  <meta content="よおこそ" >
-  <title>みずちーさんのHP トップ</title>
+  <meta content="管理人紹介" >
+  <title>みずちーさんのHP 管理人紹介</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
-
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
-<div align="center"><a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー" width="512" height="256" border="0" src="https://cdn.discordapp.com/attachments/889847829063933972/961248546110210198/top.png"><br></a>
-<p>　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
-<br>
-<br>
-<a href="https://mizutisann.github.io/HP/home">HOMEへ</a>
-<br>
-<br>
-<h2>きっとこのペエジは</h2>
-<h2>ゲームやPC、車などを扱うHPの</h2>
-<h2>TOPになる…ﾊｽﾞ…(^^;</h2>
-<br>
-<br>
-<h6>ただHPを作りたかっただけとも言う（ぉ</h6>
-<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src="https://cdn.discordapp.com/attachments/889847829063933972/1037093557284114533/banner.png" width="200" height="40" border="0"><br>
+  <h3>管理人紹介</h3>
+  
+<div align="center">
+<a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー" width="512" height="256" border="0" src="https://cdn.discordapp.com/attachments/889847829063933972/961248546110210198/top.png"><br></a>
+
 </DIV>
 </body>
 </html>
