--- a/syoukai.html
+++ b/syoukai.html
@@ -5,10 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
-  <h3>管理人紹介</h3>
-  
+  <img src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353684328528/kanrinin.png">
+<div align="left">
+<br><br>
+幻名　　　　　　　　　　　　　みずちーさん<br>
+年齢　　　　　　　　　　　　　永遠の十代後半<br>
+趣味　　　　　　　　　　　　　ゲエムとか機械とか。なんかいろいろ。<br>
+座右の銘　　　　　　　　　　　この町は嫌いだ。忘れたい思い出が染みついた場所だから。<br>
+好きな言葉　　　　　　　　　　行けたら行く、知らんけど、(^^;　（って最後の言葉じゃねー(^^;）<br>
+好きな飲み物　　　　　　　　　ルートビア、ココア、ミルクセーキ、寒い日に飲む紅茶or珈琲<br>
+好きな音楽　　　　　　　　　　YMO、平沢進、FM音源、東方のBGM、鍵のBGM、ナントカDで流れてるユーロビート、大瀧詠一とか偶に聴く<br>
+好きなゲエム機　　　　　　　　PSX、N64<br>
+好きなパソコン　　　　　　　　PC-9821AP2、今のメインPC<br>
+嫌いなパソコン　　　　　　　　分解がヤケにメンドクサイやつ、アップルのPC（oldMacは良いがテメーはダメだ）<br>
+好きな車　　　　　　　　　　　ホンダS500,S600,S800、その辺で偶に走ってる90s以前のドノーマル、2ケタナンバーの車<br>
+嫌いな車　　　　　　　　　　　JDMとか言ってる車、ワ〇ンR<br>
+好きな軍事家　　　　　　　　　特にいません<br>
+好きなお家　　　　　　　　　　和風なお家<br>
+好きな呪い　　　　　　　　　　存在ごと消えてくれる奴<br>
+よく聴く曲ジャンル　　　　　　ピアノソロ、ギターソロ、テクノ、チップチューン、FM音源、ユーロビート、トランス<br>
+</DIV><BR>
 <div align="center">
-<a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー" width="512" height="256" border="0" src="https://cdn.discordapp.com/attachments/889847829063933972/961248546110210198/top.png"><br></a>
+<H3>最近のお勧め</H3>
+</DIV>
+<div align="left">
+N/A<br>
+<br>
+</DIV>
+<div align="center">
+<a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png"><br></a>
 
 </DIV>
 </body>
