--- a/kari.html
+++ b/kari.html
@@ -10,5 +10,9 @@
 <p>TOP用に～と思って用意したけど没になったメイドさんの會でも(^^;</p>
 <img src="https://cdn.discordapp.com/attachments/889847829063933972/1038629573929222275/hometop.png">
 <p>メイドさんの名前募集中かも(^^;</p>
+</DIV>
+<div align="center">
+<a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png"><br></a>
+</DIV>
 </body>
 </html>
