--- a/syoukai.html
+++ b/syoukai.html
@@ -23,7 +23,7 @@
 　　好きな軍事家　　　　　　　　　特にいません<br>
 　　好きなお家　　　　　　　　　　和風なお家<br>
 　　好きな呪い　　　　　　　　　　存在ごと消えてくれる奴<br>
-　　よく聴く曲ジャンル　　　　　　ピアノソロ、ギターソロ、テクノ、チップチューン、FM音源、ユーロビート、トランス<br>
+　　よく聴く曲ジャンル　　　　　　ピアノソロ、ギターソロ、テクノ、チップチューン、FM音源、ユーロビート、トランス…みたいな感じかな？<br>
 </DIV><BR>
 <div align="center">
 <H3>最近のお勧め</H3>
