--- a/kari.html
+++ b/kari.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 
-<body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6">
+<body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <h1>工事中です。しばらくお待ちください。</h1>
 <p>TOP用に～と思って用意したけど没になったメイドさんの會でも(^^;</p>
 <img src="https://cdn.discordapp.com/attachments/889847829063933972/1038629573929222275/hometop.png">
