--- a/syoukai.html
+++ b/syoukai.html
@@ -15,7 +15,7 @@
 　　好きな言葉　　　　　　　　　　行けたら行く、知らんけど、(^^;　（って最後の言葉じゃねー(^^;）<br>
 　　好きな飲み物　　　　　　　　　ルートビア、ココア、ミルクセーキ、寒い日に飲む紅茶or珈琲<br>
 　　好きな音楽　　　　　　　　　　YMO、平沢進、FM音源、東方のBGM、鍵のBGM、ナントカDで流れてるユーロビート、大瀧詠一とか偶に聴く<br>
-　　好きなゲエム機　　　　　　　　PSX、N64<br>
+　　好きなゲエム　　　　　　　　　東方原作STG、CLANNAD、チョロQシリーズ<br>
 　　好きなパソコン　　　　　　　　PC-9821AP2、今のメインPC<br>
 　　嫌いなパソコン　　　　　　　　分解がヤケにメンドクサイやつ、アップルのPC（oldMacは良いがテメーはダメだ）<br>
 　　好きな車　　　　　　　　　　　ホンダS500,S600,S800、その辺で偶に走ってる90s以前のドノーマル、2ケタナンバーの車<br>
@@ -29,7 +29,7 @@
 <H3>最近のお勧め</H3>
 </DIV>
 <div align="left">
-　　N/A<br>
+　　2000年代前半の作画っていいよね。<br>
 <br>
 </DIV>
 <div align="center">
