--- a/syoukai.html
+++ b/syoukai.html
@@ -16,6 +16,7 @@
 　　好きな飲み物　　　　　　　　　ルートビア、ココア、ミルクセーキ、寒い日に飲む紅茶or珈琲<br>
 　　好きな音楽　　　　　　　　　　YMO、平沢進、FM音源、東方のBGM、鍵のBGM、ナントカDで流れてるユーロビート、大瀧詠一とか偶に聴く<br>
 　　好きなゲエム　　　　　　　　　東方原作STG、CLANNAD、チョロQシリーズ<br>
+　　好きなアニメ　　　　　　　　　serial experiments lain<br>
 　　好きなパソコン　　　　　　　　PC-9821AP2、今のメインPC<br>
 　　嫌いなパソコン　　　　　　　　分解がヤケにメンドクサイやつ、アップルのPC（oldMacは良いがテメーはダメだ）<br>
 　　好きな車　　　　　　　　　　　ホンダS500,S600,S800、その辺で偶に走ってる90s以前のドノーマル、2ケタナンバーの車<br>
