--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 <a href="https://mizutisann.github.io/HP/kari"><img alt="ゲエムの間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352849662003/game.png">ゲエムについて語ったりとか。<br></a>
 <a href="https://mizutisann.github.io/HP/kari"><img alt="PCの間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353181007932/PC.png">主にオウルドなPCの事を。<br></a>
 <a href="https://mizutisann.github.io/HP/kari"><img alt="車関係の間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352388296824/kuruma.png">これもオウルドな車の話を。<br></a>
-<a href="https://mizutisann.github.io/HP/kari"><img alt="少女會"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616354149904414/egensou.png">描いた會とかを貼ってます。<br></a>
+<a href="https://mizutisann.github.io/HP/kari"><img alt="少女會"  src="https://cdn.discordapp.com/attachments/889847829063933972/1041864863712034846/egensou.png">描いた繪とかを貼ってます。<br></a>
 <a href="https://mizutisann.github.io/HP/kari"><img alt="リンク置き場"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038619359079301270/iteki.png">リンク置き場です。偶に異的。<br></a>
 
 </div>
