--- a/zakki.html
+++ b/zakki.html
@@ -13,7 +13,11 @@
 それはそうと、今日は、何故か徹夜です。首都高バトル01やってたら寝るタイミングを失った…ぐらいしか言う事が無い。<br>
 …低水準な生活をネットに晒した所で今回の書き散らしはこのぐらいにしておきますかね(^^;<br>
 長々と書く物も無いし(^^;<br><br><br>
-
+<h3>レジンって難しいね　　　　　　　　　　2022年11月20日</h3>
+遂にPC-98のキーボードを買った、が。ESCキーが欠品。と言う事で、100均でおゆまるやら、何やらを買ってきて<br>
+キーキャップの複製をしてみました。一回目は思いっきり気泡が入り、失敗。ゴミ箱行き。二回目で無事成功（？）<br>
+無駄に蝶の形のスパンコールを入れたので、トラックの運ちゃんのシフトノブみたいになったのがアレだけど(^^;<br>
+多分、後で纏めて、PCの間に追加したいねぇ(^^;<br><br><br>
 <div align="center">
 <a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png"><br></a>
 </DIV>
