--- a/link.html
+++ b/link.html
@@ -10,6 +10,9 @@
 上海アリス幻樂団様<br>
 <a href="https://www16.big.or.jp/~zun/"><img src="http://www16.big.or.jp/~zun/image/banner.gif" width=200 height=40><br>
 </a><br><br>
+KEY OFFICIAL HOMEPAGE様<br>
+<a href="http://key.visualarts.gr.jp/"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1044680797833150544/key_bn07.gif" width=200 height=40><br>
+</a><br><br>
 </div>
 <div align="center">
 <a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png"><br></a>
