--- a/zakki.html
+++ b/zakki.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
   <meta content="zakki" >
@@ -8,18 +7,27 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
-<h3>書き散らすと言ったものの(^^;　　　　　2022年11月15日</h3>
-『雑記』と言う事で適当にそれっぽく作ってみたものの、何に使えばいいのやら(^^;<br>
-それはそうと、今日は、何故か徹夜です。首都高バトル01やってたら寝るタイミングを失った…ぐらいしか言う事が無い。<br>
-…低水準な生活をネットに晒した所で今回の書き散らしはこのぐらいにしておきますかね(^^;<br>
-長々と書く物も無いし(^^;<br><br><br>
+<h3>異的なlink　　　　　　　　　　　　　　2022年11月23日</h3>
+どうしてもLINK置き場に鍵を追加したかったので、色々と調べてバナアを追加…。<br>
+URLのファイル名を見た所、バナアには複数の種類があったみたいなので、その中からなんとなく秋子さんを選択(^^;<br>
+現在のHPは相互リンク募集停止どころか、バナア画像や注意書きが置いてあるペエジが消えてるので、なんか言われたら消します<br>
+どこのHPにも言える話だけど、どこを押せばいいのかよく分からなさすぎ、画像サイズ大きいから重いし(^^;<br><br><br>
+
 <h3>レジンって難しいね　　　　　　　　　　2022年11月20日</h3>
 遂にPC-98のキーボードを買った、が。ESCキーが欠品。と言う事で、100均でおゆまるやら、何やらを買ってきて<br>
 キーキャップの複製をしてみました。一回目は思いっきり気泡が入り、失敗。ゴミ箱行き。二回目で無事成功（？）<br>
 無駄に蝶の形のスパンコールを入れたので、トラックの運ちゃんのシフトノブみたいになったのがアレだけど(^^;<br>
 多分、後で纏めて、PCの間に追加したいねぇ(^^;<br><br><br>
+  
+<h3>書き散らすと言ったものの(^^;　　　　　2022年11月15日</h3>
+『雑記』と言う事で適当にそれっぽく作ってみたものの、何に使えばいいのやら(^^;<br>
+それはそうと、今日は、何故か徹夜です。首都高バトル01やってたら寝るタイミングを失った…ぐらいしか言う事が無い。<br>
+…低水準な生活をネットに晒した所で今回の書き散らしはこのぐらいにしておきますかね(^^;<br>
+長々と書く物も無いし(^^;<br><br><br>
+
 <div align="center">
 <a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png"><br></a>
 </DIV>
 </body>
 </html>
+
