--- a/link.html
+++ b/link.html
@@ -7,11 +7,21 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <div align="left">
-上海アリス幻樂団様<br>
+東方projectでお馴染み（？）の<br>
+  上海アリス幻樂団様<br>
 <a href="https://www16.big.or.jp/~zun/"><img src="http://www16.big.or.jp/~zun/image/banner.gif" width=200 height=40><br>
 </a><br><br>
-KEY OFFICIAL HOMEPAGE様<br>
+KanonやAIRで…って説明要らないよね(^^;<br>
+  KEY OFFICIAL HOMEPAGE様<br>
 <a href="http://key.visualarts.gr.jp/"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1044680797833150544/key_bn07.gif" width=200 height=40><br>
+</a><br><br>
+MPSの作者でバナアのサイズ(200*40)を流行らせた人(要出典) …あゝ古き良きインタアネッツ（再開まだですかぁ…）<br>
+  Rinn’s page on the web.様<br>
+<a href="http://rinn.e-site.jp/"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1047582566871482418/rinnbnnr.jpg" width=200 height=40><br>
+</a><br><br>
+Twitterで偶々知った人。その時代から絵日記を毎日更新とは恐れ入った…<br>
+  wakachan[AtelierMW]web様<br>
+<a href="http://www.ateliermw.com/"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1047588660670902392/ateliermwbnr.jpg" width=200 height=40><br>
 </a><br><br>
 </div>
 <div align="center">
