--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+<h3>大火傷（のんき）　　　　　　　　　　　2022年12月25日</h3>
+前の雑記で手に入れてしまったよと言ってた物はPC-9821Ap2なのですが、<br>
+それはそれは曲者で、完全に迷宮に入ってしまいましたとさ。(^^;<br>
+部品取りにして程度そこそこなAs2を買おうかなぁ。あゝ、散財は人生。<br>
+にしても、世間は完全にクリスマス。マシンしか拠り所の無い人生なので無縁かなぁ(^^;<br>
+普通の人はあまり好きじゃないし(^^;　<br><br><br>
 
 <h3>手に入れてしまったよ（のんき）　　　　2022年12月10日</h3>
 ｵｸで遂に落としてしまいました。お目当てのあの仔（例によってマシン）を。<br>
