--- a/home.html
+++ b/home.html
@@ -7,15 +7,15 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <h1>～みずちーさんのHP～</H1><div align="center"><h1>よおこそ</H1>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1038816393895878776/hometop00.png">
+<img src="https://cdn.discordapp.com/attachments/889847829063933972/1038816393895878776/hometop00.png" border="0" width="512" height="250">
 <h6>アクセスカウンタの置き方が分からなかったのでキリ番踏んでもバレません。うわーん(^^;</h6>
-<a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353684328528/kanrinin.png">管理人っぽい人の紹介です。<br></a>
-<a href="https://mizutisann.github.io/HP/zakki"><img alt="雑記など"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616354502213673/zakki.png">書き散らしてます。多分。<br></a>
-<a href="https://mizutisann.github.io/HP/kari"><img alt="ゲエムの間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352849662003/game.png">ゲエムについて語ったりとか。<br></a>
-<a href="https://mizutisann.github.io/HP/kari"><img alt="PCの間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353181007932/PC.png">主にオウルドなPCの事を。<br></a>
-<a href="https://mizutisann.github.io/HP/kuruma"><img alt="車関係の間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352388296824/kuruma.png">これもオウルドな車の話を。<br></a>
-<a href="https://mizutisann.github.io/HP/syouzyoe"><img alt="少女會"  src="https://cdn.discordapp.com/attachments/889847829063933972/1041864863712034846/egensou.png">描いた繪とかを貼ってます。<br></a>
-<a href="https://mizutisann.github.io/HP/link"><img alt="リンク置き場"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038619359079301270/iteki.png">リンク置き場です。偶に異的。<br></a>
+<a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353684328528/kanrinin.png" border="0" width="128" height="32">管理人っぽい人の紹介です。<br></a>
+<a href="https://mizutisann.github.io/HP/zakki"><img alt="雑記など"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616354502213673/zakki.png" border="0" width="128" height="32">書き散らしてます。多分。<br></a>
+<a href="https://mizutisann.github.io/HP/kari"><img alt="ゲエムの間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352849662003/game.png" border="0" width="128" height="32">ゲエムについて語ったりとか。<br></a>
+<a href="https://mizutisann.github.io/HP/pcnnad.html"><img alt="PCの間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353181007932/PC.png" border="0" width="128" height="32">主にオウルドなPCの事を。<br></a>
+<a href="https://mizutisann.github.io/HP/kuruma"><img alt="車関係の間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616352388296824/kuruma.png" border="0" width="128" height="32">これもオウルドな車の話を。<br></a>
+<a href="https://mizutisann.github.io/HP/syouzyoe"><img alt="少女會"  src="https://cdn.discordapp.com/attachments/889847829063933972/1041864863712034846/egensou.png" border="0" width="128" height="32">描いた繪とかを貼ってます。<br></a>
+<a href="https://mizutisann.github.io/HP/link"><img alt="リンク置き場"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038619359079301270/iteki.png" border="0" width="128" height="32">リンク置き場です。偶に異的。<br></a>
 
 </div>
 </body>
