--- a/kuruma1.html
+++ b/kuruma1.html
@@ -6,7 +6,9 @@
 </head>
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
-なにもないよ<br><br><br>
+<div align="center">
+<h2>車関係の間 小さいヤツ</h2>
+<br><br>まだなにもないよ<br><br><br>
 
 </div>
 <div align="center">
