--- a/OLDPC.html
+++ b/OLDPC.html
@@ -9,7 +9,7 @@
 <div align="center">
 <h2>PC関係の間 古いPC</h2>
 <br><br><a href="https://mizutisann.github.io/HP/ap01.html">PC-9821Ap2を直そうとする。そしてヤケド。パート1</a>
-<br><a href="https://mizutisann.github.io/HP/mac01.html">Macintosh classic2を直した。パート1</a>
+<br><br><a href="https://mizutisann.github.io/HP/mac01.html">Macintosh classic2を直した。パート1</a>
 <br><br><br>
 </div>
 <div align="center">
