--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+
+<h3>あけましておめでとうございます　　　　2023年1月1日</h3>
+と言いつつも2022年の五月辺りの気分なんですけどね(^^;<br>
+あーもう信じられねー(^^;　なんだよ2023年って。早すぎんだろ…<br>
+…さて、2022年中何もしていなかったことがバレた所で今回の雑記はこの辺で(^^;<br><br><br>
+
 <h3>大火傷（のんき）　　　　　　　　　　　2022年12月25日</h3>
 前の雑記で手に入れてしまったよと言ってた物はPC-9821Ap2なのですが、<br>
 それはそれは曲者で、完全に迷宮に入ってしまいましたとさ。(^^;<br>
