--- a/ap01.html
+++ b/ap01.html
@@ -7,8 +7,8 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <div align="center">
-<h2>50円で買ったZ32のモータートミカを直す。パート1</h2>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898657403064320/00.png" border="0" width="512" height="380"><br><br>
+<h2>PC-9821Ap2を直そうとする。そしてヤケド。パート1</h2>
+<img src="https://cdn.discordapp.com/attachments/889847829063933972/1062193313366675496/DSC_3535.jpg" border="0" width="512" height="380"><br><br>
 <img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898657738588320/01.png" border="0" width="512" height="380"><br>
 先日、とある旧車のイベントに行ったときに、<br>フリマでこの状態のZ32のモータートミカが売ってたので、つい買ってしまった。<br>
 ここまでの物は中々無いだろう、と直していきます。<br>
