--- a/ap01.html
+++ b/ap01.html
@@ -8,27 +8,31 @@
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <div align="center">
 <h2>PC-9821Ap2を直そうとする。そしてヤケド。パート1</h2>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1062193313366675496/DSC_3535.jpg" border="0" width="512" height="380"><br><br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898657738588320/01.png" border="0" width="512" height="380"><br>
-先日、とある旧車のイベントに行ったときに、<br>フリマでこの状態のZ32のモータートミカが売ってたので、つい買ってしまった。<br>
-ここまでの物は中々無いだろう、と直していきます。<br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898658019623002/02.png" border="0" width="512" height="380"><br>
-早速、分解すると、この有様。<br>
-モータからスイッチの機構まで全部、電解液が回って死んでます。<br>
-一遍の望みを掛けモータを分解してみると、中から緑錆が…。完璧に死んでます。<br>
-とりあえずメッキ類はお酢に漬けて錆を落としました。<br>
-落としてる間に、家のジャンク箱からよさげなモータを探します…<br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898658640363530/04.png" border="0" width="512" height="380"><br>
-ありました。PS1のディスクドライブのモータを拝借する事にします。<br>
-因みに昔、ジャンクで買った最初期のPS1の生贄にしたPS1です。歯車を固定するパーツが死んでます。<br>
-<br>取り付ける際、シャフトが長いのでニッパで切っちゃいます。<br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898659261141004/06.png" border="0" width="512" height="380"><br>
-収まりました。<br>
-スイッチの機構にはプラスチックを溶着したものがありますが、<br>縁の部分を切って取り外す。取り付ける時は半田ごてと黒のプラで溶着すれば元通りになります。<br><br>
-ボディの方はワイヤーブラシで塗装を落として、テキトーに下処理して塗っておきました。<br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898656803258398/07.png" border="0" width="512" height="380"><br>
-錆はテキトーにレジンを持って削って…と、まあ、うん。雑だよね(^^;<br><br>
-外すときに窓のパーツが割れちゃったから、なんかで直さないとねぇ。作るか分からないパート2に期待（？）
+<br>
+ヤフ〇クで8000円近くで買ったピポらない、ジャンクなPC-9821Ap2の話です。<br>
+結論から言うと、なんも分からんかった…orz<br>
+<img src="https://cdn.discordapp.com/attachments/889847829063933972/1062195354893815888/DSC_3535.jpg" border="0" width="512" height="380"><br><br>
+まずは分解、商品紹介で察していたものの工場の産廃置き場から拾ってきたようなマシンです。<br>
+油っぽい埃に、屋外放置っぽい錆…。思い返せば初めて触るにはハードだったか(^^;<br>
+<img src="https://cdn.discordapp.com/attachments/889847829063933972/1062195364163239976/DSC_3540.jpg" border="0" width="512" height="380"><br>
+分解が終わってマザボのみの状態にしたらコンデンサ交換。あまりお漏らしはしてなかった。<br>
+ひとまず総とっかえでピポってくれと祈りながら徹夜で組付け。<br>
+<img src="https://cdn.discordapp.com/attachments/889847829063933972/1062195354591842394/DSC_3534.jpg" border="0" width="512" height="380"><br>
+例のスポンジ両面テープの無い、タンタルコンデンサが基板に実装されている後期の方の基板だった。<br>
+おかげで水晶は錆て腐ってない。おかげで怪しいポイントが一つ減った。<br>
+<img src="https://cdn.discordapp.com/attachments/889847829063933972/1062195352708599928/DSC_3537.jpg" border="0" width="512" height="380"><br>
+電源の12Vラインが10Vぐらいしか出て無かったので迷走。手持ちで所持してるコンデンサに入れ替え、マザボと合体させ、電流を図りながら横の可変抵抗をグルグルして11Vまで持って来るもピポらず。<br>
+思い返せば、この時、12Vに近づける為に5Vラインに6V超えた値を流したのがマズかったのかも。後悔先に立たずだが(^^;…<br>
+<br>このPU729のTAMURA製の10V病、同じ人が居ないか検索すると、Twitterで一人発見。<br>
+どうやらトランジスタの2SB892というのが足を引っ張ってるらしい。が、近所の電子パーツ屋に無かったので現在難航中。<br>
+まあ、電源だけ直った所で……。<br>
+<img src="https://cdn.discordapp.com/attachments/889847829063933972/1062195363672510545/HIMG0010.jpg" border="0" width="512" height="380"><br>
+とりあえず仮組でピポれ映れと祈祷する様子。無常にもピポらず。<br>
+この時点でLEDが光らないことが発覚、テスターを当てると電気が少ししか来ていない。何故かＧＮＤと導通していた（？）<br>
+パターンを追うが何故こうなってるのかが分からない。<br>
+<img src="https://cdn.discordapp.com/attachments/889847829063933972/1062195364368764988/DSC_3545.jpg" border="0" width="512" height="380"><br>
+というわけで、大量の破棄コンデンサとテスターを前に私のスピリットポイントはゴリゴリと削れ何も分からなくなったので一先ずお蔵入りにさせてください(^^;<br><br>
+どうなるか分からないパート2に期待。　お財布がorz…
 
 </div>
 <div align="center"><br><br>
