--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,13 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+<h3>首都高バトル無印クリアなど　　　　　　2023年1月10日</h3>
+積みゲーで積んでた首都高バトル無印をクリアしました。プレイするにあたり、ビジュアルメモリなんかに掛けれる金が無いので、<br>
+エミュで動かす環境を自力で用意しました。ジャンク基板から引っぺがしてきたパーツとユニバーサル基板で吸い出し器を作成。（ネット上に回路図などが落ちてるので比較的簡単に作れる）<br>
+ドリキャス本体の不調（コントローラポートのヒューズ抵抗が切れてた、ピックアップが弱ってた）のを修理、んでやっと吸い出し。<br>
+無事動いたので、やっと重い腰を上げてイン〇グラとＮ〇Ｘで全ライバルを倒しましたとさ。<br>
+因みに最近は季節が季節なのでKeyのKanonをぼちぼちとやってます。うぐぅ。
+（ってｵｲｵｲ、ゲームの内容をあんまり語ってないじゃん、そっち語れよ(^^;）<br><br><br>
 
 <h3>あけましておめでとうございます　　　　2023年1月1日</h3>
 と言いつつも2022年の五月辺りの気分なんですけどね(^^;<br>
