--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,14 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+<h3>思いっきり流行性感冒　　　　　　　　　2023年2月5日</h3>
+先日の夜、寝るかーというタイミングで悪寒。こりゃマズいと毛布に包まって、翌朝目が覚めると、<br>
+汗だらだらの、ぽんぽんぺいんという地獄でした。こりゃあガチでマズいと、意識が朦朧とする中、<br>
+トイレを済ませ、お茶を飲んで体温測定。38.3℃ぐらいだったかな…<br>
+病院に行って検査をしてもらいましたが、どうやらコロナやインフルではないみたいで<br>
+まあ、なんやかんや熱は40.2℃まで上がりましたが、今はとりあえず下がりました(^^;<br>
+まだ倦怠感と胃腸の調子はオカシイけど(^^;　まあそれは時間薬と言う事で。<br>
+
 <h3>首都高バトル無印クリアなど　　　　　　2023年1月10日</h3>
 積みゲーで積んでた首都高バトル無印をクリアしました。プレイするにあたり、ビジュアルメモリなんかに掛けれる金が無いので、<br>
 エミュで動かす環境を自力で用意しました。ジャンク基板から引っぺがしてきたパーツとユニバーサル基板で吸い出し器を作成。（ネット上に回路図などが落ちてるので比較的簡単に作れる）<br>
