--- a/zakki.html
+++ b/zakki.html
@@ -13,7 +13,7 @@
 トイレを済ませ、お茶を飲んで体温測定。38.3℃ぐらいだったかな…<br>
 病院に行って検査をしてもらいましたが、どうやらコロナやインフルではないみたいで<br>
 まあ、なんやかんや熱は40.2℃まで上がりましたが、今はとりあえず下がりました(^^;<br>
-まだ倦怠感と胃腸の調子はオカシイけど(^^;　まあそれは時間薬と言う事で。<br>
+まだ倦怠感と胃腸の調子はオカシイけど(^^;　まあそれは時間薬と言う事で。<br><br><br>
 
 <h3>首都高バトル無印クリアなど　　　　　　2023年1月10日</h3>
 積みゲーで積んでた首都高バトル無印をクリアしました。プレイするにあたり、ビジュアルメモリなんかに掛けれる金が無いので、<br>
