--- a/syoukai.html
+++ b/syoukai.html
@@ -21,7 +21,7 @@
 　　好きなパソコン　　　　　　　　PC-9821AP2、今のメインPC<br>
 　　嫌いなパソコン　　　　　　　　分解がヤケにメンドクサイやつ、アップルのPC（oldMacは良いがテメーはダメだ）<br>
 　　好きな車　　　　　　　　　　　ホンダS500,S600,S800、その辺で偶に走ってる90s以前のドノーマル、2ケタナンバーの車<br>
-　　嫌いな車　　　　　　　　　　　JDMとか言ってる車、ワ〇ンR<br>
+　　嫌いな車　　　　　　　　　　　JDMとか言ってる奴の車、ワ〇ンR<br>
 　　好きな軍事家　　　　　　　　　特にいません<br>
 　　好きなお家　　　　　　　　　　和風なお家<br>
 　　好きな呪い　　　　　　　　　　存在ごと消えてくれる奴<br>
