--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+<h3>流行性感冒が治ったら　　　　　　　　　2023年2月11日</h3>
+先日の原因不明の熱病は治った。が、今度は体に蕁麻疹が。<br>
+皮膚科に駆け込んでアレルギーを軽減するお薬を貰ったのですが、あまり効いている様子が無い…(^^;<br>
+本当は今日、外出する用事があったのですが急遽キャンセル。ホントすまねぇ…(^^;<br>
+原因は何で、いつ治るのかねぇ…？(^^;<br><br><br>
+
 <h3>思いっきり流行性感冒　　　　　　　　　2023年2月5日</h3>
 先日の夜、寝るかーというタイミングで悪寒。こりゃマズいと毛布に包まって、翌朝目が覚めると、<br>
 汗だらだらの、ぽんぽんぺいんという地獄でした。こりゃあガチでマズいと、意識が朦朧とする中、<br>
