--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+<h3>更新サボってた。　　　　　　　　　　　2023年3月5日</h3>
+タイトル通りです。更新サボってました(^^;<br>
+弐台目となるPC-9821Ap2を買ったり、チョロQの改造をしてみたりとネタはあるのですが<br>
+このHPの事を忘れてまして(ぉぃ　まあ見てる人なんて少ないからいいと思うけど(^^;<br>
+まあボチボチ纏めて追加していくんじゃないかな？　うじゃうじゃ。<br><br><br>
+
 <h3>流行性感冒が治ったら　　　　　　　　　2023年2月11日</h3>
 先日の原因不明の熱病は治った。が、今度は体に蕁麻疹が。<br>
 皮膚科に駆け込んでアレルギーを軽減するお薬を貰ったのですが、あまり効いている様子が無い…(^^;<br>
