--- a/ap01.html
+++ b/ap01.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta content="よおこそ" >
+  <meta content="みずちーさんのHP Ap2の話" >
   <title>みずちーさんのHP PC-9821Ap2</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
@@ -32,8 +32,9 @@
 パターンを追うが何故こうなってるのかが分からない。<br>
 <img src="https://cdn.discordapp.com/attachments/889847829063933972/1062195364368764988/DSC_3545.jpg" border="0" width="512" height="380"><br>
 というわけで、大量の破棄コンデンサとテスターを前に私のスピリットポイントはゴリゴリと削れ何も分からなくなったので一先ずお蔵入りにさせてください(^^;<br><br>
-どうなるか分からないパート2に期待。　お財布がorz…
-
+どうなるか分からないパート2に期待。　お財布がorz…<br><br>
+追記/5Vラインが100Ω辺りでショート（？）していたのは正常っぽかった。12Vラインが10Vしか出て居なくても起動すると思う。<br>
+何かチップが壊れていたというオチなのだろうか……orz
 </div>
 <div align="center"><br><br>
 <a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png" border="0" width="128" height="32"><br></a>
