--- a/mac01.html
+++ b/mac01.html
@@ -24,3 +24,10 @@
 <br><br>
 FDDのギアが欠けていて、イジェクト時空転して機能していないので、次回があるとすればFDDの修理編だと思います。<br>
 SCSIなHDDが死んでるので使うなら対処が必要。と、いうかそもそもキーボードもマウスも無いので先ずはそこから(^^;<br>
+<br><br>
+</div>
+<div align="center"><br><br>
+<a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png" border="0" width="128" height="32"><br></a>
+</DIV>
+</body>
+</html>
