--- a/zakki.html
+++ b/zakki.html
@@ -7,12 +7,18 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+<h3>東方新作ｷﾀ━(ﾟ∀ﾟ)━!  　　　　　　　　2023年4月19日</h3>
+ついに東方新作が発表されましたね。TSSや夢時空、稀翁玉、花映塚スタイルの対戦型STGみたいで…って、某よもやまニュースを見てもらった方が早いか(^^;<br>
+最近の作品は自分の肌に合わない作品が多いのですが、今作はどんな感じになるんですかね？（相変わらずアビリティカードが見えるのが不穏だが…）<br>
+…まあ、情報が少なくて語る事も無いので、みすちーがプレイアブルキャラクターで出ることを祈りながら〆ますかね。うじゃうじゃ。(^^;<br><br><br>
+
 <h3>蘇るゼンマイチョロQ 　　　　　　　　　2023年4月2日</h3>
 遂にゼンマイチョロQが5月の下旬に出るらしいですね。やっぱチョロQといえばゼンマイよ。変なモーターじゃなくて。<br>
 まあワイスピコラボってのとチョロQゼロの劣化版みたいなのと造形がチョロQっぽくないのが残念ですが…ついでに言うと値段高いし(^^;<br>
 自分、ワイスピって嫌いなんですよね。平気でぶつけて回るし、アザーカーに迷惑かけてばかりだし、コーナーは横滑りで抜けてくし、安全マージンなんて全然取ってないし、自分からすると邪道な改造ばかりだし。何しろ憧れの車がJDMとかいって海外に流れていく原因の一つってのも痛い。<br>
 まあ無難にスープラでも買って、ボディにちょっと手を加えて金色にでも塗り変えますかね(^^;　（初期のゼロなら余裕で買える価格なので失敗出来ないのが辛い所）<br>
 発売が少し楽しみだけど、金欠だー(^^;<br><br><br>
+
 <h3>更新サボってた。　　　　　　　　　　　2023年3月5日</h3>
 タイトル通りです。更新サボってました(^^;<br>
 弐台目となるPC-9821Ap2を買ったり、チョロQの改造をしてみたりとネタはあるのですが<br>
