--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,15 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+<h3>東方獣王園についてﾎﾞｿｯと。  　　　　　2023年5月11日</h3>
+まあ、ここなら見てる人も少ないし、ネタバレしても良いだろう。と言う事で。<br>
+起動してまず焦ったのが操作を受け付けない事。コントローラー優先になっていて泣きました。<br>
+ゲーム中、忌まわしきCキーを使わないとボムが打てないのでそれも辛い。花映塚みたいな感じにキーコンフィグできれば良かったんだけど…<br>
+あとボーダーレスウィンドウの黒帯があるアレで起動すると「弾幕開始」の表示がバグったり、ゲーム中にタイトルに戻るを選択するとソフトが落ちたり、魔理沙のレーザーが消えたりとバグがまあまあ多い。<br>
+まあ、体験版だしそんなもんなんだろうけど…<s>（っつたく、何年ゲーム作ってるんだよ…）</s><br>
+どうなるんだろうなぁ。製品版に期待って事で(^^;<br>
+P.S.クイックリトライ”ポーズ中にRキーを押すアレ）復活してくれー！頼む！<br><br><br>
+
 <h3>東方新作ｷﾀ━(ﾟ∀ﾟ)━!  　　　　　　　　2023年4月19日</h3>
 ついに東方新作が発表されましたね。TSSや夢時空、稀翁玉、花映塚スタイルの対戦型STGみたいで…って、某よもやまニュースを見てもらった方が早いか(^^;<br>
 最近の作品は自分の肌に合わない作品が多いのですが、今作はどんな感じになるんですかね？（相変わらずアビリティカードが見えるのが不穏だが…）<br>
