--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,13 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+<h3>近況とか色々。　　　　　  　　　　　2023年6月16日</h3>
+一か月空けちゃった(^^;提出しないとマズいレポートの息抜きにカキコ。<br>
+例のチョロQを買って早速破壊したり、PC-9821AP2にCFtoIDEを付けたり、ボッロボロのHB-201を貰ったり、ぼざろを見てノスタルジーに浸ったりとかしてました。<br>
+ボチボチ纏めたいけど、なんやかんやメンドクサイのよねぇ…（ぉぃ<br>
+ま、どうせ誰も見てないだろうから（悲しいこという）身軽にやりましょーっと…。<br>
+あー、眠い眠い…<br><br><br>
+
 <h3>東方獣王園についてﾎﾞｿｯと。  　　　　　2023年5月11日</h3>
 まあ、ここなら見てる人も少ないし、ネタバレしても良いだろう。と言う事で。<br>
 起動してまず焦ったのが操作を受け付けない事。コントローラー優先になっていて泣きました。<br>
