--- a/zakki.html
+++ b/zakki.html
@@ -7,7 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
-<h3>近況とか色々。　　　　　  　　　　　2023年6月16日</h3>
+<h3>なんもわからん　　　　　　　　　　　　2023年7月1日</h3>
+友達から貰ったHB-201の話です。直らねー！<br>
+なんかCPUが死んでるっぽい雰囲気が…。そんな変なもんなんてその辺で売ってないぞー…、と言う事でインオペとしました(^^;<br>
+CPUさえ手に入ればなんとかなるかも…？？知らんけど(^^;<br><br><br>
+
+<h3>近況とか色々。　　　　　  　　　　　　2023年6月16日</h3>
 一か月空けちゃった(^^;提出しないとマズいレポートの息抜きにカキコ。<br>
 例のチョロQを買って早速破壊したり、PC-9821AP2にCFtoIDEを付けたり、ボッロボロのHB-201を貰ったり、ぼざろを見てノスタルジーに浸ったりとかしてました。<br>
 ボチボチ纏めたいけど、なんやかんやメンドクサイのよねぇ…（ぉぃ<br>
