--- a/syoukai.html
+++ b/syoukai.html
@@ -17,13 +17,13 @@
 　　好きな音楽　　　　　　　　　　YMO、平沢進、FM音源、東方のBGM、鍵のBGM、ナントカDで流れてるユーロビート、大瀧詠一とか偶に聴く<br>
 　　好きなゲエム　　　　　　　　　東方原作STG、CLANNAD、チョロQシリーズ<br>
 　　好きなゲエム機　　　　　　　　PSX、N64<br>
-　　好きなアニメ　　　　　　　　　serial experiments lain<br>
+　　好きなアニメ　　　　　　　　　serial experiments lain、ぼっち・ざ・ろっく！<br>
 　　好きなパソコン　　　　　　　　PC-9821AP2、今のメインPC<br>
 　　嫌いなパソコン　　　　　　　　分解がヤケにメンドクサイやつ、アップルのPC（oldMacは良いがテメーはダメだ）<br>
 　　好きな車　　　　　　　　　　　ホンダS500,S600,S800、その辺で偶に走ってる90s以前のドノーマル、2ケタナンバーの車<br>
 　　嫌いな車　　　　　　　　　　　JDMとか言ってる奴の車、ワ〇ンR<br>
 　　好きな軍事家　　　　　　　　　特にいません<br>
-　　好きなお家　　　　　　　　　　和風なお家<br>
+　　好きなお家　　　　　　　　　　和風なお家　ガレージとか欲しい。<br>
 　　好きな呪い　　　　　　　　　　存在ごと消えてくれる奴<br>
 　　よく聴く曲ジャンル　　　　　　ピアノソロ、ギターソロ、テクノ、チップチューン、FM音源、ユーロビート、トランス…みたいな感じかな？<br>
 </DIV><BR>
