--- a/top.html
+++ b/top.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 
-<body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
+<body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <div align="center"><a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー" width="512" height="256" border="0" src="https://cdn.discordapp.com/attachments/889847829063933972/961248546110210198/top.png"><br></a>
 <p>　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
 <br>
