--- a/link.html
+++ b/link.html
@@ -8,24 +8,20 @@
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <div align="left">
 東方projectでお馴染み（？）の<br>
-  上海アリス幻樂団様<br>
+  上海アリス幻樂団<br>
 <a href="https://www16.big.or.jp/~zun/"><img src="http://www16.big.or.jp/~zun/image/banner.gif" width=200 height=40><br>
 </a><br><br>
 KanonやAIRで…って説明要らないよね(^^;<br>
-  KEY OFFICIAL HOMEPAGE様<br>
+  KEY OFFICIAL HOMEPAGE<br>
 <a href="http://key.visualarts.gr.jp/"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1044680797833150544/key_bn07.gif" width=200 height=40><br>
 </a><br><br>
-MPSの作者でバナアのサイズ(200*40)を流行らせた人(要出典) …あゝ古き良きインタアネッツ<br>
-  Rinn’s page on the web.様<br>
-<a href="http://rinn.e-site.jp/"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1047582566871482418/rinnbnnr.jpg" width=200 height=40><br>
-</a><br><br>
-Twitterで偶々知った人。その時代から絵日記を毎日更新とは恐れ入った…<br>
-  wakachan[AtelierMW]web様<br>
-<a href="http://www.ateliermw.com/"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1047588660670902392/ateliermwbnr.jpg" width=200 height=40><br>
-</a><br><br>
 何かデジャヴを感じさせるホオムペエジ。桃木の下の穴にある楽園へ繋がると思います<br>
-  正直村の面忘様<br>
+  正直村の面忘<br>
 <a href="http://houraidoll1.s203.xrea.com/" target="_blank"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1081712870850568293/banner.gif" width=200 height=40</a> 
+どういうわけか仲良くさせて貰ってる古の東方とかに詳しい人<br>
+  閉鎖路地<br>
+<a href="https://shibaa.web.fc2.com/"><img src="https://raw.githubusercontent.com/mizutisann/HP/main/banner-heisa.png" width=200 height=40><br>
+</a><br><br>
 </div>
 <div align="center">
 <a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png"><br></a>
