--- a/link.html
+++ b/link.html
@@ -17,7 +17,8 @@ KanonやAIRで…って説明要らないよね(^^;<br>
 </a><br><br>
 何かデジャヴを感じさせるホオムペエジ。桃木の下の穴にある楽園へ繋がると思います<br>
   正直村の面忘<br>
-<a href="http://houraidoll1.s203.xrea.com/" target="_blank"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1081712870850568293/banner.gif" width=200 height=40</a> 
+<a href="http://houraidoll1.s203.xrea.com/" target="_blank"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1081712870850568293/banner.gif" width=200 height=40><br>
+</a><br><br>
 どういうわけか仲良くさせて貰ってる古の東方とかに詳しい人<br>
   閉鎖路地<br>
 <a href="https://shibaa.web.fc2.com/"><img src="https://raw.githubusercontent.com/mizutisann/HP/main/banner-heisa.png" width=200 height=40><br>
