--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <br>
+<h3>とりあえず　　　　　　　　　　　　　　2023年7月28日</h3>
+このホオムペエジ、自分でも何が何だか分からないぐらいとっ散らかしてるので、そろそろコテ入れをします。多分。<br>
+もし、「ここがおかしいぞ！あの担板漢がまた何かやりあがったな！」となった場合はﾋやMiで教えてくれるとありがたいです。<br>
+と、いいつつもリアルの方もまあまあ忙しいので、早いうちにとしか言えないけれど…(^^;<br>
+Ｐ．Ｓ．書いてた雑記がブルスクで消されて悲しいよー(^^;<br><br><br>
+
 <h3>なんもわからん　　　　　　　　　　　　2023年7月1日</h3>
 友達から貰ったHB-201の話です。直らねー！<br>
 なんかCPUが死んでるっぽい雰囲気が…。そんな変なもんなんてその辺で売ってないぞー…、と言う事でインオペとしました(^^;<br>
