--- a/top.html
+++ b/top.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 
-<body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://raw.githubusercontent.com/mizutisann/HP/main/img/bakg1.png">
+<body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center"><a href="https://mizutisann.github.io/HP/home"><img alt="飾りバー" width="512" height="256" border="0" src="https://cdn.discordapp.com/attachments/889847829063933972/961248546110210198/top.png"><br></a>
 <p>　　　　　　　　　　　　　　　　　　　Since 2022.4 ～</p>
 <br>
@@ -21,7 +21,7 @@
 <h6>ただHPを作りたかっただけとも言う（ぉ</h6>
 <br><hr>
 当ペエジは、横670px以上で見ることを想定してます。多分。
-<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src="https://raw.githubusercontent.com/mizutisann/HP/main/img/banner-tuzura.png" width="200" height="40" border="0"><br>
+<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=https://mizutisann.github.io/HP/img/banner-tuzura.png" width="200" height="40" border="0"><br>
 </DIV>
 </body>
 </html>
