--- a/top.html
+++ b/top.html
@@ -20,7 +20,7 @@
 <h6>ただHPを作りたかっただけとも言う（ぉ</h6>
 <br><hr>
 当ペエジは、横670px以上で見ることを想定してます。多分。
-<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=https://mizutisann.github.io/HP/img/banner-tuzura.png" width="200" height="40" border="0"><br>
+<br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=https://mizutisann.github.io/HP/img/banner-tuzura.png width="200" height="40" border="0"><br>
 </DIV>
 </body>
 </html>
