--- a/top.html
+++ b/top.html
@@ -14,11 +14,12 @@
 <br>
 <h2>きっとこのペエジは</h2>
 <h2>ゲームやPC、車などを扱うHPの</h2>
-<h2>TOPになる…ﾊｽﾞ…(^^;</h2>
+<h2>TOPだと思います。(^^;</h2>
 <br>
 <br>
 <h6>ただHPを作りたかっただけとも言う（ぉ</h6>
 <br><hr>
+ブックマーク、リンク等はこのページにお願いします。<br>
 当ペエジは、横670px以上で見ることを想定してます。多分。
 <br>おおよそリンクフリーです。バナアは持ち帰ってテキトーにお使いくださいな。<img src=https://mizutisann.github.io/HP/img/banner-tuzura.png width="200" height="40" border="0"><br>
 </DIV>
