--- a/zakki.html
+++ b/zakki.html
@@ -5,8 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 
-<body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
+<body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>ホムペの名称変更　　　　　　　　　　　2023年8月4日</h3>
+Twitterの名称がX<DEL>（クソダサいよね）</DEL>になったのでこっちの名称も変えることにしました（半分嘘、半分ホント (^^;）<br>
+ホオムペエジの名称を『𧃴折り』としました。『つづらおり』と呼びます。県内某所の地名から取りました。<br>
+まあ、その話はまた今度にでも。<br><br><br>
+
 <h3>とりあえず　　　　　　　　　　　　　　2023年7月28日</h3>
 このホオムペエジ、自分でも何が何だか分からないぐらいとっ散らかしてるので、そろそろコテ入れをします。多分。<br>
 もし、「ここがおかしいぞ！あの担板漢がまた何かやりあがったな！」となった場合はﾋやMiで教えてくれるとありがたいです。<br>
