--- a/img/pc/oldpc/AP2ACT1/pcoldap2act1.html
+++ b/img/pc/oldpc/AP2ACT1/pcoldap2act1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta content="みずちーさんのHP Ap2 ATC.1" >
-  <title>みずちーさんのHP PC-9821Ap2</title>
+  <title>みずちーさんのHP PC-9821Ap2　ACT.1</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 
