--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="https://mizutisann.github.io/HP/img/home/kanrinin.png" border="0" width="128" height="32">管理人っぽい人の紹介です。<br></a>
 <a href="https://mizutisann.github.io/HP/zakki"><img alt="雑記など"  src="https://mizutisann.github.io/HP/img/home/zakki.png" border="0" width="128" height="32">書き散らしてます。多分。<br></a>
 <a href="https://mizutisann.github.io/HP/kari"><img alt="ゲエムの間"  src="https://mizutisann.github.io/HP/img/home/game.png" border="0" width="128" height="32">ゲエムについて語ったりとか。<br></a>
-<a href="https://mizutisann.github.io/HP/pcnnad.html"><img alt="PCの間"  src="https://mizutisann.github.io/HP/img/home/PC.png" border="0" width="128" height="32">主にオウルドなPCの事を。<br></a>
+<a href="https://mizutisann.github.io/HP/PC.html"><img alt="PCの間"  src="https://mizutisann.github.io/HP/img/home/PC.png" border="0" width="128" height="32">主にオウルドなPCの事を。<br></a>
 <a href="https://mizutisann.github.io/HP/kuruma"><img alt="車関係の間"  src="https://mizutisann.github.io/HP/img/home/kuruma.png" border="0" width="128" height="32">これもオウルドな車の話を。<br></a>
 <a href="https://mizutisann.github.io/HP/syouzyoe"><img alt="少女會"  src="https://mizutisann.github.io/HP/img/home/egensou.png" border="0" width="128" height="32">描いた繪とかを貼ってます。<br></a>
 <a href="https://mizutisann.github.io/HP/link"><img alt="リンク置き場"  src="https://mizutisann.github.io/HP/img/home/iteki.png" border="0" width="128" height="32">リンク置き場です。偶に異的。<br></a>
