--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>名古屋行って来た　　　　　　　　　　　2023年8月14日</h3>
+知り合いの車に揺られ名古屋へ行ってきました。<br>
+あまり詳しくは書きませんが、カートで筋肉痛になったり、トヨタ博物館で早口になったり、痛車に乗る羽目になったりという旅でした。<br>
+都会は物が簡単に手に入っていいですね～(^^;　愛媛で探してたけど買えなかった物とかも置いてあったし。<br>
+でも、やっぱり都会よりも地方の方が落ち着くなぁ、変な人も少ないし(^^;<br><br><br>
+
 <h3>ホムペの名称変更　　　　　　　　　　　2023年8月4日</h3>
 Twitterの名称がX<DEL>（クソダサいよね）</DEL>になったのでこっちの名称も変えることにしました（半分嘘、半分ホント (^^;）<br>
 ホオムペエジの名称を『𧃴折り』としました。『つづらおり』と呼びます。県内某所の地名から取りました。<br>
