--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,14 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>実はとある合同誌に寄稿してました　　　2023年8月21日</h3>
+2か月ほど前の幺樂団カァニバルにて頒布されたユキマイ合同にちょいと寄稿してました。<br>
+シナリオを煮込み過ぎた結果、4Pに収める為に大幅なカットが必要になり、途方もなく間違っていた〆切も相まって、かなり薄く雑な内容になってしまいましたが…(滝汗、色々すまんかった。）<br>
+ちなみにユキマイが乗っている車は、ダッ〇サン200SXをベースに、国内向けに販売されたニッ〇ンS11型シルビアの顔面を張り付けたなんちゃってシルエイティだったりします。（画力とマイナー車ってのが相まって誰も気づいてないと思うけど(^^;）<br>
+妖怪の山陣営の車は1965年の鈴鹿クラブマン優勝車両のホ〇ダS600です。通称カラスと呼ばれているので…(^^;<br>
+21日はそんなカラスのドライバー、浮谷東次郎の命日なので、この話をした感じです(^^;<br>
+PS 忙しくて書きかけで2日寝かしたため、23日の深夜に投稿するハメになったのは秘密(^^;<br><br><br>
+
 <h3>名古屋行って来た　　　　　　　　　　　2023年8月14日</h3>
 知り合いの車に揺られ名古屋へ行ってきました。<br>
 あまり詳しくは書きませんが、カートで筋肉痛になったり、トヨタ博物館で早口になったり、痛車に乗る羽目になったりという旅でした。<br>
