--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>いやはや…　　　　　　　　　　　 　　　2023年9月25日</h3>
+一か月近く更新してませんでしたね(^^;<br>
+半月ほど前に原付一種の免許を取ったので、最近はもっぱらツーリング＆ローリングです(半分嘘　乗ってるのカブだし(^^;<br>
+今まで自転車で山道を走り回っていたので、原付は本当に快適です。まあ、30㎞/hと二段階右折が玉に瑕ですが…。なんなら、街中だと自転車の方が楽で速いですが…(^^;<br>
+まあ、事故とスピード超過に気を付けて適度に走り回りたいと思います(^^;<br><br><br>
+
 <h3>実はとある合同誌に寄稿してました　　　2023年8月21日</h3>
 2か月ほど前の幺樂団カァニバルにて頒布されたユキマイ合同にちょいと寄稿してました。<br>
 シナリオを煮込み過ぎた結果、4Pに収める為に大幅なカットが必要になり、途方もなく間違っていた〆切も相まって、かなり薄く雑な内容になってしまいましたが…(滝汗、色々すまんかった。）<br>
