--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,17 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>今更windowsXP　　　　 　　　　 　　　2023年9月25日</h3>
+今更ながら古い<s>エロゲ</s>ゲームを動かすために、産廃のようなノートPCを購入してwindowsXPをインストールした。<br>
+再インストールでもするときの備忘録としてﾎﾞｿｯと書き残しておきます。(^^;<br>
+買って来たPCはPC-LL750SG、CPUはcore2duo 2.40GHz、RAMはDDR3 4GB、HDDはモニタに異常がある先代WinXP機に入っていた160GBを入れておいた。<br>
+ものすごーく難航したのはドライバインストール、プリインストールされていたのはWindowsVisraなので互換が無い物が殆ど。<br>
+NECのサイトに年式の近いVersaProのダウングレードドライバが転がっていた。インストールできるものはインストールしておいた。<br>
+正常にインストールできたのは音声ドライバ、無線LANドライバ、と言った感じ。NXパッドのドライバは入れるとパッド操作時カクつくのでお勧めしない。<br>
+グラフィックドライバはv14.42.15.5420が丁度適合するバージョンらしかったので、個別で怪しそうなサイトから落としてインストールした。<br>
+まだ不明なデバイスが残っているが、まあ動くので…（爆　(^^;　<br>
+何はともあれ、これで晴れて古い<s>エロゲ三昧</s>ゲーム三昧である(^^;<br><br><br>
+
 <h3>いやはや…　　　　　　　　　　　 　　　2023年9月24日</h3>
 一か月近く更新してませんでしたね(^^;<br>
 半月ほど前に原付一種の免許を取ったので、最近はもっぱらツーリング＆ローリングです(半分嘘　乗ってるのカブだし(^^;<br>
