--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,14 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>トプ画の話　　　　　　　　　　　　　　2023年9月26日</h3>
+Mi.ioの方で呟いたが、トプ画の右側に合成してあるトンネルが通行止めになっていた…。<br>
+場所は国道33号沿いの𧃴川…ではなく、伊予市のJR高野川駅から南、国道378号沿いの分かりにくい場所にある。<br>
+ちなみに『沿い』だけあって旧道っぽい。（航空写真で見てみるとトンネル横の海が埋め立てられて道が出来たのがよく分かる）<br>
+銘板が無いので具体的な開通時期は知らないが、ロマンがあるトンネルだったので残念。<br>
+因みに合成してある写真は、友達の自転車がパンクして、偶然立ち寄った時に撮ったものだったりする。<br>
+まだこのホムペが「𧃴折り」に名称変更する前の残り物だし、いい加減編集しないとなぁ…。めんどくさーい。(^^;<br><br><br>
+
 <h3>今更windowsXP　　　　 　　　　 　　　2023年9月25日</h3>
 今更ながら古い<s>エロゲ</s>ゲームを動かすために、産廃のようなノートPCを購入してwindowsXPをインストールした。<br>
 再インストールでもするときの備忘録としてﾎﾞｿｯと書き残しておきます。(^^;<br>
