--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,13 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>探求心は猫をも殺す？　　　　　　　　　2023年9月28日</h3>
+松山市から高知へ行く道として、三坂峠という峠がある。今やバイパスが出来、一部を除き旧道となり閑散としているが…。<br>
+80年代～90年代には走り屋が跋扈していたらしい。その頃の三坂峠の写真を見てみたいが、ネット上にも県立の図書館にもそれらしい資料が無くてかな～り困っている。<br>
+国土地理院の航空写真だと70年代と現在しか存在しない。GoogleEarthだと85年の衛星写真があるが、荒すぎて何も分からない。（その次は04年、まだドライブイン跡が残っていたり少々の参考にはなる…？）現存している個人サイトも粗方探したがそれっぽい写真は無かった。<br>
+こういう時は県立図書館かな…。と駆け込んで、90年代前半の航空写真（ふるさと空の旅）を見てみたが、砥部のページに前半区間がチラッと写っていただけだった。<s>せっかくセスナか何かを飛ばしたんだったら撮ってきてよー(^^;</s><br>
+残るは…フィールドワークかなぁ…。嫌だなー、でも探求心は抑えられない…(^^;<br><br><br>
+
 <h3>トプ画の話　　　　　　　　　　　　　　2023年9月26日</h3>
 Mi.ioの方で呟いたが、トプ画の右側に合成してあるトンネルが通行止めになっていた…。<br>
 場所は国道33号沿いの𧃴川…ではなく、伊予市のJR高野川駅から南、国道378号沿いの分かりにくい場所にある。<br>
